# oz_mini_django_2nd_test

./: build.sh  db.sqlite3  pyproject.toml  render.yaml
common/: models.py
config/: settings.py  urls.py
mbti_get/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
mbti_get/migrations/: 0001_initial.py
